Added trace method.

--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -22,4 +22,5 @@ build_and_run_test(determinant.cpp)
 build_and_run_test(getters.cpp)
 build_and_run_test(matrices_ops.cpp)
 build_and_run_test(scalar_ops.cpp)
+build_and_run_test(trace.cpp)
 build_and_run_test(transpose.cpp)
