Added dot product function.

--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -19,6 +19,7 @@ endmacro()
 build_and_run_test(compare_ops.cpp)
 build_and_run_test(construction.cpp)
 build_and_run_test(determinant.cpp)
+build_and_run_test(dot_product.cpp)
 build_and_run_test(getters.cpp)
 build_and_run_test(matrices_ops.cpp)
 build_and_run_test(scalar_ops.cpp)
