Use static dot for multiplication.

--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -22,6 +22,7 @@ build_and_run_test(determinant.cpp)
 build_and_run_test(dot_product.cpp)
 build_and_run_test(getters.cpp)
 build_and_run_test(matrices_ops.cpp)
+build_and_run_test(multiply.cpp)
 build_and_run_test(scalar_ops.cpp)
 build_and_run_test(trace.cpp)
 build_and_run_test(transpose.cpp)
