--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -18,12 +18,15 @@ endmacro()
 
 build_and_run_test(compare_ops.cpp)
 build_and_run_test(construction.cpp)
+build_and_run_test(copy_vector.cpp)
 build_and_run_test(determinant.cpp)
 build_and_run_test(dot_product.cpp)
 build_and_run_test(getters.cpp)
 build_and_run_test(matrices_ops.cpp)
 build_and_run_test(multiply.cpp)
 build_and_run_test(norm.cpp)
+build_and_run_test(normalize.cpp)
+build_and_run_test(orthonormalization.cpp)
 build_and_run_test(sequence_helpers.cpp)
 build_and_run_test(scalar_ops.cpp)
 build_and_run_test(trace.cpp)
