Added mean function.

--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -23,6 +23,7 @@ build_and_run_test(determinant.cpp)
 build_and_run_test(dot_product.cpp)
 build_and_run_test(getters.cpp)
 build_and_run_test(matrices_ops.cpp)
+build_and_run_test(mean.cpp)
 build_and_run_test(multiply.cpp)
 build_and_run_test(norm.cpp)
 build_and_run_test(normalize.cpp)
