Added deviation and covariance functions + related unit-tests

--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -19,7 +19,9 @@ endmacro()
 build_and_run_test(compare_ops.cpp)
 build_and_run_test(construction.cpp)
 build_and_run_test(copy_vector.cpp)
+build_and_run_test(covariance.cpp)
 build_and_run_test(determinant.cpp)
+build_and_run_test(deviation.cpp)
 build_and_run_test(dot_product.cpp)
 build_and_run_test(getters.cpp)
 build_and_run_test(matrices_ops.cpp)
