--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -32,5 +32,6 @@ build_and_run_test(normalize.cpp)
 build_and_run_test(orthonormalization.cpp)
 build_and_run_test(sequence_helpers.cpp)
 build_and_run_test(scalar_ops.cpp)
+build_and_run_test(standard_deviation.cpp)
 build_and_run_test(trace.cpp)
 build_and_run_test(transpose.cpp)
