Replace external deviation function as class method mean_center.

--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -21,11 +21,11 @@ build_and_run_test(construction.cpp)
 build_and_run_test(copy_vector.cpp)
 build_and_run_test(covariance.cpp)
 build_and_run_test(determinant.cpp)
-build_and_run_test(deviation.cpp)
 build_and_run_test(dot_product.cpp)
 build_and_run_test(getters.cpp)
 build_and_run_test(matrices_ops.cpp)
 build_and_run_test(mean.cpp)
+build_and_run_test(mean_center.cpp)
 build_and_run_test(multiply.cpp)
 build_and_run_test(norm.cpp)
 build_and_run_test(normalize.cpp)
