Added standard deviation centering method and related unit-tests.

--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -33,5 +33,6 @@ build_and_run_test(orthonormalization.cpp)
 build_and_run_test(sequence_helpers.cpp)
 build_and_run_test(scalar_ops.cpp)
 build_and_run_test(standard_deviation.cpp)
+build_and_run_test(stddev_center.cpp)
 build_and_run_test(trace.cpp)
 build_and_run_test(transpose.cpp)
