Added correlation function and related unit-tests.

--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -19,6 +19,7 @@ endmacro()
 build_and_run_test(compare_ops.cpp)
 build_and_run_test(construction.cpp)
 build_and_run_test(copy_vector.cpp)
+build_and_run_test(correlation.cpp)
 build_and_run_test(covariance.cpp)
 build_and_run_test(determinant.cpp)
 build_and_run_test(dot_product.cpp)
