Added is_symmetric method to ct_mat + additional unit-tests.

--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -24,6 +24,8 @@ build_and_run_test(covariance.cpp)
 build_and_run_test(determinant.cpp)
 build_and_run_test(dot_product.cpp)
 build_and_run_test(getters.cpp)
+build_and_run_test(is_diagonal.cpp)
+build_and_run_test(is_symmetric.cpp)
 build_and_run_test(matrices_ops.cpp)
 build_and_run_test(mean.cpp)
 build_and_run_test(mean_center.cpp)
