Added QR decomposition helper along with unit-tests. Fixed orthonormalization issue due to numerical instability when normalizing "almost zero" column vector.

--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -33,6 +33,7 @@ build_and_run_test(multiply.cpp)
 build_and_run_test(norm.cpp)
 build_and_run_test(normalize.cpp)
 build_and_run_test(orthonormalization.cpp)
+build_and_run_test(qr_decomposition.cpp)
 build_and_run_test(sequence_helpers.cpp)
 build_and_run_test(scalar_ops.cpp)
 build_and_run_test(standard_deviation.cpp)
