--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -10,34 +10,39 @@ add_custom_target(tests
 macro(build_and_run_test source_file)
   get_filename_component(test_name ${source_file} NAME_WE)
   add_executable(${test_name} ${source_file})
-  target_link_libraries(${test_name} ${Boost_LIBRARIES})
+  target_link_libraries(${test_name}
+    mfmat
+    ${Boost_LIBRARIES}
+    ${OpenCL_LIBRARIES})
   add_dependencies(tests ${test_name})
   add_test(${test_name} ${test_name})
   set_tests_properties(${test_name} PROPERTIES TIMEOUT 30)
 endmacro()
 
-build_and_run_test(compare_ops.cpp)
-build_and_run_test(construction.cpp)
-build_and_run_test(copy_vector.cpp)
-build_and_run_test(correlation.cpp)
-build_and_run_test(covariance.cpp)
-build_and_run_test(determinant.cpp)
-build_and_run_test(dot_product.cpp)
-build_and_run_test(getters.cpp)
-build_and_run_test(is_diagonal.cpp)
-build_and_run_test(is_symmetric.cpp)
-build_and_run_test(matrices_ops.cpp)
-build_and_run_test(mean.cpp)
-build_and_run_test(mean_center.cpp)
-build_and_run_test(multiply.cpp)
-build_and_run_test(norm.cpp)
-build_and_run_test(normalize.cpp)
-build_and_run_test(orthonormalization.cpp)
-build_and_run_test(qr_decomposition.cpp)
-build_and_run_test(qr_eigen.cpp)
-build_and_run_test(sequence_helpers.cpp)
-build_and_run_test(scalar_ops.cpp)
-build_and_run_test(standard_deviation.cpp)
-build_and_run_test(stddev_center.cpp)
-build_and_run_test(trace.cpp)
-build_and_run_test(transpose.cpp)
+build_and_run_test(cl_kernels_store_initialization.cpp)
+
+build_and_run_test(ct_compare_ops.cpp)
+build_and_run_test(ct_construction.cpp)
+build_and_run_test(ct_copy_vector.cpp)
+build_and_run_test(ct_correlation.cpp)
+build_and_run_test(ct_covariance.cpp)
+build_and_run_test(ct_determinant.cpp)
+build_and_run_test(ct_dot_product.cpp)
+build_and_run_test(ct_getters.cpp)
+build_and_run_test(ct_is_diagonal.cpp)
+build_and_run_test(ct_is_symmetric.cpp)
+build_and_run_test(ct_matrices_ops.cpp)
+build_and_run_test(ct_mean.cpp)
+build_and_run_test(ct_mean_center.cpp)
+build_and_run_test(ct_multiply.cpp)
+build_and_run_test(ct_norm.cpp)
+build_and_run_test(ct_normalize.cpp)
+build_and_run_test(ct_orthonormalization.cpp)
+build_and_run_test(ct_qr_decomposition.cpp)
+build_and_run_test(ct_qr_eigen.cpp)
+build_and_run_test(ct_sequence_helpers.cpp)
+build_and_run_test(ct_scalar_ops.cpp)
+build_and_run_test(ct_standard_deviation.cpp)
+build_and_run_test(ct_stddev_center.cpp)
+build_and_run_test(ct_trace.cpp)
+build_and_run_test(ct_transpose.cpp)
