--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -23,6 +23,7 @@ build_and_run_test(cl_construction.cpp)
 build_and_run_test(cl_kernels_store_initialization.cpp)
 build_and_run_test(cl_matrices_ops.cpp)
 build_and_run_test(cl_mean.cpp)
+build_and_run_test(cl_mean_center.cpp)
 build_and_run_test(cl_multiply.cpp)
 build_and_run_test(cl_scalar_ops.cpp)
 build_and_run_test(cl_transpose.cpp)
