Added orthonormalization method for cl_mat.

--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -27,6 +27,7 @@ build_and_run_test(cl_matrices_ops.cpp)
 build_and_run_test(cl_mean.cpp)
 build_and_run_test(cl_mean_center.cpp)
 build_and_run_test(cl_multiply.cpp)
+build_and_run_test(cl_orthonormalization.cpp)
 build_and_run_test(cl_scalar_ops.cpp)
 build_and_run_test(cl_standard_deviation.cpp)
 build_and_run_test(cl_stddev_center.cpp)
