qr_decomposition now supports cl_mat. Added compare operators to cl_mat along with appropriate unit-tests.

--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -19,6 +19,7 @@ macro(build_and_run_test source_file)
   set_tests_properties(${test_name} PROPERTIES TIMEOUT 30)
 endmacro()
 
+build_and_run_test(cl_compare_ops.cpp)
 build_and_run_test(cl_construction.cpp)
 build_and_run_test(cl_correlation.cpp)
 build_and_run_test(cl_covariance.cpp)
@@ -28,6 +29,7 @@ build_and_run_test(cl_mean.cpp)
 build_and_run_test(cl_mean_center.cpp)
 build_and_run_test(cl_multiply.cpp)
 build_and_run_test(cl_orthonormalization.cpp)
+build_and_run_test(cl_qr_decomposition.cpp)
 build_and_run_test(cl_scalar_ops.cpp)
 build_and_run_test(cl_standard_deviation.cpp)
 build_and_run_test(cl_stddev_center.cpp)
