Added is_diagonal and is_symmetric methods to cl_mat along with unit-tests.

--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -23,6 +23,8 @@ build_and_run_test(cl_compare_ops.cpp)
 build_and_run_test(cl_construction.cpp)
 build_and_run_test(cl_correlation.cpp)
 build_and_run_test(cl_covariance.cpp)
+build_and_run_test(cl_is_diagonal.cpp)
+build_and_run_test(cl_is_symmetric.cpp)
 build_and_run_test(cl_kernels_store_initialization.cpp)
 build_and_run_test(cl_matrices_ops.cpp)
 build_and_run_test(cl_mean.cpp)
