--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,3 @@
-# Push definitions
-add_compile_definitions(
-  GIT_AUTHOR=$ENV{GIT_AUTHOR}
-  GIT_COMMIT_DATE=$ENV{GIT_COMMIT_DATE}
-  GIT_COMMIT_HASH=$ENV{GIT_COMMIT_HASH}
-  GIT_TAG=$ENV{GIT_TAG})
-
 set(HEADERS_DIR ${CMAKE_SOURCE_DIR}/include)
 set(CL_KERNELS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/cl_kernels)
 
@@ -37,6 +30,9 @@ add_library(mfmat STATIC
   ${SOURCES}
   ${CL_KERNELS_OBJ})
 
+set_property(TARGET mfmat
+  PROPERTY POSITION_INDEPENDENT_CODE ON)
+
 target_include_directories(mfmat
   PUBLIC
     $<INSTALL_INTERFACE:include>
@@ -45,11 +41,7 @@ target_include_directories(mfmat
 target_compile_features(mfmat
   PUBLIC cxx_std_20)
 
-# todo: use INTERPROCEDURAL_OPTIMIZATION property instead of -flto once cmake
-#       properly relies on AR/NM/RANLIB with LTO plugin
 target_compile_options(mfmat
-  PUBLIC
-    $<$<AND:$<CONFIG:Release>,$<BOOL:${LTO}>>:-flto>
   PRIVATE
     ${MFMAT_CXX_FLAGS})
 
